2009-04-30: Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Add patch from loki_val to check -l dependencies in 
	.la files (Bug #267898)

2009-04-24: Paul Varner <fuzzyray@gentoo.org>
	* ekeyword: Fix to handle multiline KEYWORDS (Bug #267250)

2009-01-08: Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix package.py to account for PORTDIR being a symbolic link
	when checking if a package is in an overlay. (Bug #253968)

2008-11-25: Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fixes for non-linux Gentoo systems. Add patch from
	igli to fix find command to comply with POSIX. Change awk calls to
	gawk.

2008-11-11: Paul Varner <fuzzyray@gentoo.org>
	* echangelog: Add --strict option (Bug 246242).
	* echangelog: Fix processing of virtual category (Bug 179530)

2008-09-17: Paul Varner <fuzzyray@gentoo.org>
	* euse: Fix check_sanity function to use get_all_make_defaults
	function when checking for the make.defaults files in the profile.
	(Bug #233651)

2008-09-03: Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix depgraph function to print out dependencies that don't
	resolve to a package (Bug #236492)

2008-08-26: Paul Varner <fuzzyray@gentoo.org>
	* glsa-check: Fix has_key() deprecation message. (Bug #232797)
	* revdep-rebuild: Update fix for Bug 232270 to utilize better patch
	from Ian Abbott.

2008-08-22: Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Fix find_packages and find_installed_packages to print
	a warning instead of a traceback when an InvalidAtom exception occurs.
	(Bug #234358)
	* equery: Fix equery belongs to strip multiple slashes from path
	names. (Bug #234584)

2008-07-24: Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix equery check to convert mtime to an integer so that
	comparisions always work. Thanks to Alexey Parshin for discovering the
	problem and providing a patch. (Bug 232803)

2008-07-22: Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Fix gentoolkit.split_package_name to work with